Main menu visible on desktop fix

--- a/app/assets/stylesheets/components/_main_menu.scss
+++ b/app/assets/stylesheets/components/_main_menu.scss
@@ -23,6 +23,7 @@
 
     @include breakpoint(large){
       display: block;
+      visibility: visible;
       opacity: 1;
       position: relative;
     }
